syntax = "proto3";

package learning;

option go_package = "github.com/amityadav/landr/pkg/pb/learning";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service LearningService {
  rpc AddMaterial(AddMaterialRequest) returns (AddMaterialResponse);
  rpc GetDueFlashcards(google.protobuf.Empty) returns (FlashcardList);
  rpc CompleteReview(CompleteReviewRequest) returns (google.protobuf.Empty);
}

message AddMaterialRequest {
  string type = 1; // "TEXT" or "LINK"
  string content = 2;
}

message AddMaterialResponse {
  string material_id = 1;
  int32 flashcards_created = 2;
}

message Flashcard {
  string id = 1;
  string question = 2;
  string answer = 3;
  int32 stage = 4;
  google.protobuf.Timestamp next_review_at = 5;
}

message FlashcardList {
  repeated Flashcard flashcards = 1;
}

message CompleteReviewRequest {
  string flashcard_id = 1;
}
